<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_category"
            android:title="@string/category" />

        <item
            android:id="@+id/nav_worker"
            android:icon="@drawable/ic_people"
            android:title="@string/worker" />

        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_order"
            android:title="@string/order" />

        <item

            android:id="@+id/nav_customer"
            android:icon="@drawable/ic_customer"
            android:title="@string/customer" />


    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_output"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>